fixed contextmanager, tables visible & do update but look corrupt

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -78,6 +78,13 @@ label {
   padding: 0px;
 }
 
+.button-change-time {
+  background-color: transparent;
+  border-color: transparent;
+  margin: 5px;
+  padding: 0px;
+}
+
 .button-event {
   background-color: transparent;
   border-color: transparent;
